GPv3: Edit mode overlay memory leaks #117132

Closed
opened 2024-01-15 14:35:05 +01:00 by Falk David · 1 comment
Member

System Information
Operating system: Linux-6.5.0-10013-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.1 branch: main
Worked: -

Short description of error

Blender leaks memory when using edit mode.

Blender quit
Error: Not freed memory blocks: 735, total unfreed memory 0.180836 MB
GLVertBuf len: 520 0x6160000957b8
GLVertBuf len: 520 0x616000094eb8
GPUIndexBuf data len: 188 0x611000582078
GLIndexBuf len: 48 0x60b0001e22e8
GLIndexBuf len: 48 0x60b0001e1e18
GLBatch len: 256 0x61200059ca78
GLBatch len: 256 0x61200059cd78
GLVertBuf len: 520 0x616000094bb8
GLVertBuf len: 520 0x6160000930b8
GPUIndexBuf data len: 196 0x61200059c478
GLIndexBuf len: 48 0x60b0001e2238
GLIndexBuf len: 48 0x60b0001e2188
GLBatch len: 256 0x61200059c8f8
GLBatch len: 256 0x61200058bc78
GLVertBuf len: 520 0x6160000ac2b8
GLVertBuf len: 520 0x6160000ab9b8
GPUIndexBuf data len: 188 0x611000aa4b78

Exact steps for others to reproduce the error

  • Open Blender (with Grease Pencil 3 enabled).
  • Create a new Grease Pencil object
  • Switch to edit mode (do a selection for good measure)
  • Quit Blender -> Memory is leaked.
**System Information** Operating system: Linux-6.5.0-10013-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.1 branch: main Worked: - **Short description of error** Blender leaks memory when using edit mode. ``` Blender quit Error: Not freed memory blocks: 735, total unfreed memory 0.180836 MB GLVertBuf len: 520 0x6160000957b8 GLVertBuf len: 520 0x616000094eb8 GPUIndexBuf data len: 188 0x611000582078 GLIndexBuf len: 48 0x60b0001e22e8 GLIndexBuf len: 48 0x60b0001e1e18 GLBatch len: 256 0x61200059ca78 GLBatch len: 256 0x61200059cd78 GLVertBuf len: 520 0x616000094bb8 GLVertBuf len: 520 0x6160000930b8 GPUIndexBuf data len: 196 0x61200059c478 GLIndexBuf len: 48 0x60b0001e2238 GLIndexBuf len: 48 0x60b0001e2188 GLBatch len: 256 0x61200059c8f8 GLBatch len: 256 0x61200058bc78 GLVertBuf len: 520 0x6160000ac2b8 GLVertBuf len: 520 0x6160000ab9b8 GPUIndexBuf data len: 188 0x611000aa4b78 ``` **Exact steps for others to reproduce the error** * Open Blender (with Grease Pencil 3 enabled). * Create a new Grease Pencil object * Switch to edit mode (do a selection for good measure) * Quit Blender -> Memory is leaked.
Falk David added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-01-15 14:35:06 +01:00
Falk David added this to the Grease Pencil project 2024-01-15 14:35:09 +01:00
Author
Member

@casey-bianco-davis Could you take a look at this?

@casey-bianco-davis Could you take a look at this?
Falk David added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-01-15 14:35:33 +01:00
Germano Cavalcante added the
Module
Grease Pencil
label 2024-01-16 13:53:47 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-29 11:56:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117132
No description provided.